fix chrome bug: RTL overflow unable to scroll
use LTR all the way

--- a/src/components/Sheet/HeaderRow/styles.css
+++ b/src/components/Sheet/HeaderRow/styles.css
@@ -22,6 +22,6 @@
   border-left: 0;
 }
 
-[dir=rtl] .item {
+.item.rtl {
   font-size: 18px;
 }
