--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
   --border-color: #d5d5d5;
 }
 
-[dir] .container {
+.container {
+  visibility: hidden;
   border: 1px solid var(--border-color);
   overflow: scroll;
   position: relative;
@@ -14,6 +15,10 @@
   font-size: 16px;
 }
 
-[dir=rtl] .container {
+.container.rtl {
   font-family: 'Amiri', serif;
+}
+
+.visible {
+  visibility: visible;
 }
